--- a/refcards.sty
+++ b/refcards.sty
@@ -43,19 +43,20 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Formatting (font for sections, etc.)
 \usepackage{titlesec}
-\titlespacing*{\section}{0pt}{1ex}{0pt}
+\titlespacing*{\section}{0pt}{0ex}{0pt}
 \titleformat{\section}
   {\normalfont\sffamily\large\bfseries}
   {\thesection}{1em}{}
 \titlespacing*{\subsection}{0pt}{0pt}{0pt}
 \titleformat{\subsection}
   {\normalfont\sffamily\bfseries}
-  {\thesubsection}{1em}{}
+  {\thesubsection}{0em}{}
 
 \renewcommand{\title}[1]{{\normalfont\sffamily\huge\bfseries #1}\vspace{1ex}}
 
 \parindent=0pt
 \parskip=0pt
+\linespread{0.00001}
 \topsep=0pt
 \partopsep=0pt
 \pagestyle{empty} % no page number
