--- a/Neural_network.tex
+++ b/Neural_network.tex
@@ -1,5 +1,7 @@
 \documentclass[cheatsheet.tex]{subfiles}
 \begin{document}
+\textbf{When to use} input high dim. target function unknown. long training time. human readability. good for complex pattern recognition.\\
+
 \textbf{RNN} Directed cycles exist.\\
 
 \textbf{GD} search \textit{hypothesis space} to find $w$ for minimum error(slow, local minimum). \textit{Variation} incremental GD, SGD.\\
