--- a/cheatsheet.tex
+++ b/cheatsheet.tex
@@ -36,6 +36,7 @@
 %{0ex}    % footser separation
 %\setlength\columnsep{4mm}
 \begin{document}
+%\tiny
 \raggedright
 \begin{multicols}{3}
 \section{Key ingredients}
