--- a/refcards.sty
+++ b/refcards.sty
@@ -45,18 +45,18 @@
 \usepackage{titlesec}
 \titlespacing*{\section}{0pt}{0ex}{0pt}
 \titleformat{\section}
-  {\normalfont\sffamily\large\bfseries}
+  {\normalfont\sffamily\normalsize\bfseries}
   {\thesection}{1em}{}
 \titlespacing*{\subsection}{0pt}{0pt}{0pt}
 \titleformat{\subsection}
-  {\normalfont\sffamily\bfseries}
-  {\thesubsection}{0em}{}
+  {\normalfont\sffamily\small\bfseries}
+  {\thesubsection}{1em}{}
 
 \renewcommand{\title}[1]{{\normalfont\sffamily\huge\bfseries #1}\vspace{1ex}}
 
 \parindent=0pt
 \parskip=0pt
-\linespread{0.00001}
+\linespread{0.0001}
 \topsep=0pt
 \partopsep=0pt
 \pagestyle{empty} % no page number
