--- a/Classification.tex
+++ b/Classification.tex
@@ -1,4 +1,9 @@
 \documentclass[cheatsheet.tex]{subfiles}
 \begin{document}
-\lipsum[1-9]
+\subsection{binary classification}
+\lipsum[1-2]
+\subsection{scoring \& ranking}
+\lipsum[1-2]
+\subsection{probability estimation}
+\lipsum[1-2]
 \end{document}
