--- a/Concept_learning.tex
+++ b/Concept_learning.tex
@@ -1,4 +1,11 @@
 \documentclass[cheatsheet.tex]{subfiles}
 \begin{document}
-\lipsum[1-9]
+\subsection{hypothesis space}
+\lipsum[1-2]
+\subsection{pathes through hypothesis space}
+\lipsum[1-2]
+\subsection{beyond conjunctive concepts}
+\lipsum[1-2]
+\subsection{learnability}
+\lipsum[1-2]
 \end{document}
