--- a/Decision_trees.tex
+++ b/Decision_trees.tex
@@ -1,4 +1,9 @@
 \documentclass[cheatsheet.tex]{subfiles}
 \begin{document}
+\subsection{decision tree}
+\lipsum[2-4]
+\subsection{ranking \& probabilities}
+\lipsum[2-4]
+\subsection{tree learning as variance reduction}
 \lipsum[2-4]
 \end{document}
