--- a/Linear_models.tex
+++ b/Linear_models.tex
@@ -1,4 +1,11 @@
 \documentclass[cheatsheet.tex]{subfiles}
 \begin{document}
-\lipsum[1-9]
+\subsection{least-square}
+\lipsum[1-2]
+\subsection{perceptron}
+\lipsum[1-2]
+\subsection{svm}
+\lipsum[1-2]
+\subsection{non-linear \& probabilities}
+\lipsum[1-2]
 \end{document}
