--- a/beyond_classification.tex
+++ b/beyond_classification.tex
@@ -1,9 +1,11 @@
 \documentclass[cheatsheet.tex]{subfiles}
 \begin{document}
-\subsection{tasks}
+\subsection{multi classes}
 \lipsum[1-2]
-\subsection{models}
+\subsection{regression}
 \lipsum[1-2]
-\subsection{features}
+\subsection{unsupervised \& descriptive learning}
 \lipsum[1-2]
 \end{document}
+
+ 
