--- a/cheatsheet.tex
+++ b/cheatsheet.tex
@@ -49,6 +49,8 @@
 \subfile{Decision_trees}
 \section{Linear models}
 \subfile{Linear_models}
+\section{beyond binary classification}
+\subfile{beyond_classification}
 \section{Distance-based models}
 \subfile{Distance-based_models}
 \section{Probabilistic models}
