--- a/cheatsheet.tex
+++ b/cheatsheet.tex
@@ -9,6 +9,7 @@
 \usepackage{vmargin}
 \usepackage{lipsum}
 \usepackage{subfiles}
+\usepackage{amssymb}
 
 % A4
 \setpapersize[landscape]{A4}
@@ -41,7 +42,7 @@
 \begin{multicols}{3}
 \section{Key ingredients}
 \subfile{Key_ingredients}
-\section{Classification}
+\section{Classification}	
 \subfile{Classification}
 \section{Concept learning}
 \subfile{Concept_learning}
