--- a/Features.tex
+++ b/Features.tex
@@ -12,7 +12,8 @@
 \\
 \textbf{Clustering} find clusters (groupings) that are compact with respect to the distance metric. 
 \\
-\textbf{Scatter Matrix} The scatter of X is defined as the trace of the scatter matrix.(The trace is the sum of the diagonal elements of a square matrix). 
+\textbf{Scatter Matrix} $S=k\hat{\Sigma}=X_zX_z^T=\sum^{K}_{j=1}S_j+B$ within cluster matrix + between cluster matrix. The scatter of X is defined as the trace of the scatter matrix.(The trace is the sum of the diagonal elements of a square matrix). 
+$Scat(X)=\sum^n_{i=1}\|X_i-\mu\|^2$ $Scat(D)=\sum^K_{j=1}Scat(D_j)+\sum^K_{j=1}|D_j|\|\mu_j-\mu\|$
 \\
 \textbf{Kmeans} NP-complete, no efficient solution to find the optimal clustering (data partition). \textbf{K-means algorithm} heuristic algorithm, not optimal, converge to local optimal, works quite well in most cases. run several times (with a random starting point) and then the best solution is selected(the solution with the smallest within-cluster scatter). 
 \\
